# safari-bot

./: .gitignore  main.py  pyproject.toml
cogs/: safari.py  utils.py
data_models/: action.py  pokemon.py
db/: db.py  helpers.py  models.py
migrations/: env.py
migrations/versions/: 1d10f192935a_init_tables.py  5f158634e827_.py  6171c2763eef_add_safari_inventory.py  6f179523868b_fix_tables.py  6f8794f97bac_rename_user_table_to_users.py  8dea843cd992_create_user_table.py  ab6f92c3528d_initial_tables.py  d0ad7b1f14ea_add_caught_pokemon_table.py
tools/: populate_pokemon.py
views/: pokemon_view.py
