[tool.poetry]
name = "safari-bot"
version = "0.1.0"
description = "A discord bot for a pokemon safari"
authors = ["DrProfSgtMrJ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.6.4"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.11"
sqlalchemy = "^2.0.44"


[tool.poetry.group.dev.dependencies]
alembic = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
